@@ -12,7 +12,6 @@ import edu.colorado.phet.common.phetcommon.util.SimpleObserver;
 import edu.colorado.phet.common.phetcommon.util.function.Function1;
 import edu.colorado.phet.common.phetcommon.view.PhetFrame;
 import edu.colorado.phet.common.piccolophet.PiccoloModule;
-import edu.colorado.phet.gravityandorbits.view.Scale;
 
 /**
  * The GravityAndOrbitsModule has a set of "modes", one mode for each configuration of bodies (eg, Sun + Planet).
@@ -41,7 +40,6 @@ public class GravityAndOrbitsModule extends PiccoloModule {
     public final Property<Boolean> clockPausedProperty = new Property<Boolean>( true );
     public final Property<Double> timeSpeedScaleProperty = new Property<Double>( ( 0.1 + 2 ) / 4 );//one quarter of the way up between 1/10 and 2 scale factors
     public final Property<Boolean> measuringTapeVisibleProperty = new Property<Boolean>( false );
-    public final Property<Scale> scaleProperty = new Property<Scale>( Scale.REAL );
     public final Property<Boolean> gravityEnabledProperty = new Property<Boolean>( true );//TODO: remove
     public final Property<Boolean> stepping = new Property<Boolean>( false );
     public final Property<Boolean> rewinding = new Property<Boolean>( false );
@@ -53,7 +51,7 @@ public class GravityAndOrbitsModule extends PiccoloModule {
 
     public GravityAndOrbitsModule( final PhetFrame phetFrame, Property<Boolean> whiteBackgroundProperty, final String name, boolean showMeasuringTape, Function1<ModeListParameter, ArrayList<GravityAndOrbitsMode>> createModes, int initialMode ) {
         super( name, new ConstantDtClock( 30, 1 ) );//TODO: I don't think this clock is used since each mode has its own clock; perhaps this just runs the active tab?
-        modes = createModes.apply( new ModeListParameter( clockPausedProperty, gravityEnabledProperty, scaleProperty, stepping, rewinding, timeSpeedScaleProperty ) );
+        modes = createModes.apply( new ModeListParameter( clockPausedProperty, gravityEnabledProperty, stepping, rewinding, timeSpeedScaleProperty ) );
         modeProperty = new Property<GravityAndOrbitsMode>( modes.get( initialMode ) );
         this.whiteBackgroundProperty = whiteBackgroundProperty;
         this.showMeasuringTape = showMeasuringTape;
@@ -111,7 +109,6 @@ public class GravityAndOrbitsModule extends PiccoloModule {
         showPathProperty.reset();
         showVelocityProperty.reset();
         showMassProperty.reset();
-        scaleProperty.reset();
         modeProperty.reset();
         measuringTapeVisibleProperty.reset();
         clockPausedProperty.reset();
