@@ -261,7 +261,7 @@ public class ModeList extends ArrayList<GravityAndOrbitsMode> {
             addBody( new Body( GAOStrings.SATELLITE, earthSpaceStation.spaceStation.x, earthSpaceStation.spaceStation.y,
                                earthSpaceStation.spaceStation.radius * 2000,
                                earthSpaceStation.spaceStation.vx, earthSpaceStation.spaceStation.vy, earthSpaceStation.spaceStation.mass, Color.gray, Color.white,
-                               getImageRenderer( "space-station.png" ), p.scaleProperty, -Math.PI / 4, true, getMaxPathLength(), true,
+                               getImageRenderer( "space-station.png" ), -Math.PI / 4, true, getMaxPathLength(), true,
                                earthSpaceStation.spaceStation.mass, GAOStrings.SPACE_STATION, p.clockPausedProperty, p.stepping, p.rewinding ) );
         }} );
     }
@@ -289,7 +289,7 @@ public class ModeList extends ArrayList<GravityAndOrbitsMode> {
     private Body createMoon( boolean massSettable, int maxPathLength, final boolean massReadoutBelow, BodyPrototype body ) {
         return new Body( GAOStrings.MOON, body.x, body.y, body.radius * 2, body.vx, body.vy, body.mass, Color.magenta, Color.white,
                          //putting this number too large makes a kink or curly-q in the moon trajectory, which should be avoided
-                         getRenderer( "moon.png", body.mass ), p.scaleProperty, -3 * Math.PI / 4, massSettable, maxPathLength,
+                         getRenderer( "moon.png", body.mass ), -3 * Math.PI / 4, massSettable, maxPathLength,
                          massReadoutBelow, body.mass, GAOStrings.OUR_MOON, p.clockPausedProperty, p.stepping, p.rewinding ) {
             @Override
             protected void doReturnBody( GravityAndOrbitsModel model ) {
@@ -312,13 +312,13 @@ public class ModeList extends ArrayList<GravityAndOrbitsMode> {
 
     private Body createEarth( int maxPathLength, BodyPrototype body ) {
         return new Body( GAOStrings.PLANET, body.x, body.y, body.radius * 2, body.vx, body.vy, body.mass, Color.gray, Color.lightGray,
-                         getRenderer( "earth_satellite.gif", body.mass ), p.scaleProperty, -Math.PI / 4, true,
+                         getRenderer( "earth_satellite.gif", body.mass ), -Math.PI / 4, true,
                          maxPathLength, true, body.mass, GAOStrings.EARTH, p.clockPausedProperty, p.stepping, p.rewinding );
     }
 
     private Body createSun( int maxPathLength, BodyPrototype body ) {
         return new Body( GAOStrings.SUN, body.x, body.y, body.radius * 2, body.vx, body.vy, body.mass, Color.yellow, Color.white,
-                         SUN_RENDERER, p.scaleProperty, -Math.PI / 4, true, maxPathLength, true, body.mass, GAOStrings.OUR_SUN, p.clockPausedProperty, p.stepping, p.rewinding );
+                         SUN_RENDERER, -Math.PI / 4, true, maxPathLength, true, body.mass, GAOStrings.OUR_SUN, p.clockPausedProperty, p.stepping, p.rewinding );
     }
 
     public static Function2<Body, Double, BodyRenderer> getImageRenderer( final String image ) {
