@@ -1,14 +1,0 @@
-// Copyright 2002-2011, University of Colorado
-
-package edu.colorado.phet.gravityandorbits.view;
-
-/**
- * Enumeration pattern that indicates the different types of scale for the simulation, currently cartoon and real.
- * Cartoon scale modifies the sizes and locations of the bodies, Real shows everything to scale.
- *
- * @author Sam Reid
- * @deprecated TODO: Remove this class since cartoon scaling has been removed
- */
-public class Scale {
-    public static final Scale REAL = new Scale();
-}
